# OS_lab1

./: .gitignore  CMakeLists.txt  a.txt  a.txt.pub  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  sa  sa.pub
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt
benchmark/dmitrievmyshell/: HelloWorldBench.cpp
ci/: commons.bash  precommit.bash  prepare.bash
cmake/: CompileOptions.cmake
source/: CMakeLists.txt
source/dmitrievmyshell/: Dedup.cpp  Dedup.hpp  EmaSearch.cpp  EmaSearch.hpp  HelloWorld.cpp  HelloWorld.hpp  Shell.cpp  Shell.hpp  cpu_load.cpp  cpuload  io_load  io_load.cpp  ioload  multi_load.cpp  multi_load_opt  multi_loadd
source/dmitrievmyshell/app/: Main.cpp
test/: CMakeLists.txt
test/dmitrievmyshell/: DedupTest.cpp  EmaSearchTest.cpp  HelloWorldTest.cpp  ShellTest.cpp  TestMain.cpp
