get_filename_component(DMITRIEVMYSHELL_TEST_INCLUDE_PATH "." ABSOLUTE)
get_filename_component(DMITRIEVMYSHELLTEST_SOURCE_PATH "./${PROJECT_NAME}" ABSOLUTE)

set(DMITRIEVMYSHELL_TEST_TARGET "${PROJECT_NAME}-test")

file(GLOB_RECURSE DMITRIEVMYSHELL_TEST_SOURCES CONFIGURE_DEPENDS *.hpp *.cpp)

add_executable(${DMITRIEVMYSHELL_TEST_TARGET} ${DMITRIEVMYSHELL_TEST_SOURCES})

target_include_directories(${DMITRIEVMYSHELL_TEST_TARGET} PUBLIC ${DMITRIEVMYSHELL_TEST_INCLUDE_PATH})

target_link_libraries(
    ${DMITRIEVMYSHELL_TEST_TARGET} PRIVATE
    ${PROJECT_NAME}
    GTest::gtest
    GTest::gmock
)

gtest_discover_tests(${DMITRIEVMYSHELL_TEST_TARGET})
